--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,33 @@
-# Ignore everything
-*
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
-# Don't ignore .gitignore
-!.gitignore
+# Testing
+coverage/
 
-# Don't ignore .next folder and its contents
-!.next/
-!.next/**/*
+# Next.js
+.next/
+!.next/cache/
+out/
+
+# Production
+build/
+dist/
+
+# Misc
+.DS_Store
+*.pem
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Video files
+public/videos/
